# muniffic_quest

./: Quest_for_the_solar_sombrero.mnproj
Assets/Scenes/: Start.egscene
Assets/Scripts/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Quest_for_the_solar_sombrero.csproj  Quest_for_the_solar_sombrero.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Assets/Scripts/Source/: EntityTypeComponent.cs  Enums.cs  GroundCheck.cs  HealthComponent.cs  MovementMethods.cs
Assets/Scripts/Source/Camera/: CameraMove.cs
Assets/Scripts/Source/Effects/: ArmorEffect.cs  AttackSpeedBoost.cs  DamageBoostEffect.cs  Effect.cs  EffectsComponent.cs  FireEffect.cs  InstaKill.cs  JumpEffect.cs  PoisonEffect.cs  SlowEffect.cs  SpeedEffect.cs  SunResistance.cs
Assets/Scripts/Source/Enemies/: BaseEnemy.cs  EnemyAttackBoxComponent.cs  EnemyMeleeAttackComponent.cs  EnemyRunComponent.cs  EnemyShootAttackComponent.cs
Assets/Scripts/Source/Map Elements/: Fire.cs  Lava.cs  Med-kit.cs  Mushroom.cs  Portal.cs  Potion.cs  Spike.cs  Star.cs  WeightedVest.cs
Assets/Scripts/Source/Players/: AttackBoxComponent.cs  JumpComponent.cs  MeleeAttackComponent.cs  Player.cs  PlayerBullet.cs  RunComponent.cs  ShootAttackComponent.cs
Assets/Scripts/Source/UI/: HealthBar.cs
Assets/Scripts/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe  ALL_BUILD.vcxproj.AssemblyReference.cache  ALL_BUILD.vcxproj.FileListAbsolute.txt
Assets/Scripts/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Assets/Scripts/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Assets/Scripts/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Assets/metadata/: Animations.mnmeta  AssetDirectory.mnmeta  Audio.mnmeta  Fonts.mnmeta  Frames.mnmeta  Scripts.mnmeta  SubTextures.mnmeta  Textures.mnmeta
